Fixed heading in charts pages clipping in front of nav bar

--- a/styles/header-nav.css
+++ b/styles/header-nav.css
@@ -12,7 +12,7 @@ html, body {
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
-    z-index: 1;
+    z-index: 100;
     position: fixed;
     top: 0;
     left: 0;
